fixed form icon display problem on mobile devices

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -3102,6 +3102,10 @@ select {
 		grid-column: span 4 / span 4;
 	}
 
+	.lg\:block {
+		display: block;
+	}
+
 	.lg\:w-7\/12 {
 		width: 58.333333%;
 	}
